<resources>
    <string name="app_name">Krujz Clothshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Krujz Gergely</string>
    <string name="nav_header_subtitle">krujzg97@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="activity_Main">Main</string>
    <string name="fragment_home">Home</string>
    <string name="activity_registration">Registration</string>
    <string name="registrate">Sign up</string>

</resources>
