<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.clothshop.userinterface.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.clothshop.userinterface.order.OrderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.clothshop.userinterface.income.IncomeFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.clothshop.userinterface.forgotpassword.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.clothshop.userinterface.delete.DeleteFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.clothshop.userinterface.complaint.ComplaintFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>